Style/ navbar: Adjusted alignment of home button

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
   <body>
     <nav id="navbar">
       <ul>
+        <a href= "index.html" >
+          <img id="home-icon" alt="home button" src="./images/home-icon-bw.png"  onmouseover="this.src='./images/home-icon-black-pink.png';" onmouseout="this.src='./images/home-icon-bw.png';" >
+        </a>
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
           <a class ="nav-link" href="#resume"><li>Resumé</li></a>
           <a class ="nav-link" href="#portfolio-br"><li>Portfolio</li></a>
           <a class ="nav-link" href="aboutme.html"><li>Contact Me</li></a>
       </ul>
     </nav>
-    <a href= "index.html" >
-      <img id="home-icon" alt="home button" src="./images/home-icon-bw.png"  onmouseover="this.src='./images/home-icon-black-pink.png';" onmouseout="this.src='./images/home-icon-bw.png';" >
-    </a>
+
     <section id="welcome-section">
       <div id="welcome-header">
       <img id= "bluemandala" src="https://i.ibb.co/1rVVsmy/mandala-blue-whitebg-copy.png" alt="mandala-blue-whitebg-copy" border="0" />
@@ -64,10 +65,16 @@
       <h2>Portfolio</h2>
 
       <div id="portfolio-content">
-      <p>Hello! My name is Jamila.
-        I am a Full Stack Web Developer with a focus on responsive web design. And I am passionate about creating seamless user experiences. Over the past year, I have mostly been working on building Progressive Web Apps and on a more limited scale creating computational and digital art.
+      <p>
+        <i>Website Redesign Under Construction: </i>
+        <br/>
+        <br/>
 
-        I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020. I mostly specialize in Javascript, HTML, and CSS, but over the years have briefly explored many different technologies and languages and have been working on refining my programming skills.
+        Hello! My name is Jamila.
+        I am a Full Stack Web Developer with a focus on responsive web design. And I am passionate about creating seamless user experiences. Over the past year, I have mostly been working on building Progressive Web Apps and on a more limited scale creating computational and digital art.
+        <br/>
+        <br/>
+        I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020.  Over the years have briefly explored many different technologies and languages and have been working on refining my programming skills. I mostly work with Javascript, HTML, CSS and to a lesser extent Java and C++.
 
         Below are some projects I've worked on: </p>
 
