Add updated Resume, recent creative code art, & social media icons

--- a/index.html
+++ b/index.html
@@ -41,20 +41,7 @@
          </div>
            <img id="pinkmandala" src="https://i.ibb.co/L1yps89/pink-mandala.png" alt="pink-mandala" border="0"/>
       </div>
-      <div class="social-icons">
-        <a href="https://www.linkedin.com/in/jamila-toaha">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="https://github.com/jtoaha">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="https://twitter.com/jamilaNYC">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://facebook.com/jamilaNYC">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-      </div>
+
     </section>
 
     <br id="portfolio-br">
@@ -74,10 +61,51 @@
         I am a Full Stack Web Developer with a focus on responsive web design. And I am passionate about creating seamless user experiences. Over the past year, I have mostly been working on building Progressive Web Apps and on a more limited scale creating computational and digital art.
         <br/>
         <br/>
-        I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020.  Over the years have briefly explored many different technologies and languages and have been working on refining my programming skills. I mostly work with Javascript, HTML, CSS and to a lesser extent Java and C++.
+        I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020. Over the years, I have briefly explored  different technologies and languages and have been working on refining my programming skills. I mostly work with Javascript, HTML, CSS and to a lesser extent Java and C++.
 
         Below are some projects I've worked on: </p>
 
+        <section id="cisc3630">
+
+          <h2>Creative Coding</h2>
+          <p>Summer 2021</p>
+          <p>Source Code: <a target="_blank" href="https://github.com/jtoaha/idm-creative-coding">https://github.com/jtoaha/idm-creative-coding</a></p>
+          <dl class="project-list">
+            <dt></dt>
+            <div>
+
+              <dd class="project-tile"><a target="_blank" href="CreativeCoding/Week2/homework2.html">Recreation of Concreto, Alfredo Volpi, December 1950<img src="images/project-covers/recreation-alfred-cover.png">
+               </a></dd>
+
+              <dd class="project-tile"><a target="_blank" href="CreativeCoding/Week3/homework3.html">Animated Moiré Pattern<img src="images/project-covers/moire-cover.png"></a>2 copies rotate and intersect creating mesmerizing patterns</dd>
+
+              <dd class="project-tile"><a target="_blank" href="CreativeCoding/Week4/homework4.html">Albers Color Studies: three to two colors experiment<img src="images/project-covers/albers-cover.png">Two colors appear as three. Click to change colors.</a></dd>
+
+              <dd class="project-tile"><a target="_blank" href="CreativeCoding/Week5/homework5.html">Jigglypuff Recreation<img src="images/project-covers/jigglypuff-cover.png"></a>Recreated using mostly bezier curves.</dd>
+
+              <dd class="project-tile"><a target="_blank" href="CreativeCoding/Week6/homework6.html">Animated Spiraling Circle Art<img src="images/project-covers/circling-spiral-art2.png">See canvas come together in real time. Refresh for a different color set.</a></dd>
+
+              <dd class="project-tile"><a target="_blank" href="CreativeCoding/Week7/homework7.html">Animated Lissajous Curves<img src="images/project-covers/lissajou-cover.png">Experimented with Lissajous Curves.</a></dd>
+            </dl>
+            </section>
+
+
+        <section id="cisc3630">
+          <h2>CISC 3630: Multimedia Computing</h2>
+          <p> Disclaimer: Most of the assets are borrowed here. There are assets I've modified for more customized use. However, the logic present in the animation, drag and drop, and game aspect is original. </p>
+          <p>Source Code: <a target="_blank" href="https://github.com/jtoaha/CISC3630/">https://github.com/jtoaha/CISC3630/</a></p>
+          <dl class="project-list">
+            <dt></dt>
+            <div>
+
+              <dd class="project-tile"><a target="_blank" href="CISC3630/wick-animation/Wick-Editor-Animation-Jamila-Toaha.html">Animation<img src="images/project-covers/wick-animation-cover.png">Animation made using WickEditor, which is an editing program which has programming aspects to it. Animation can be played using.Takes a few moments to load.</a></dd>
+
+              <dd class="project-tile"><a target="_blank" href="CISC3630/wick-drag-and-drop/DragAndDrop-JamilaToaha.html">Drag and Drop<img src="images/project-covers/wick-drag-and-drop-cover.png">Fun Drag and Drop made using Wick Editor. Part of the assignment was to add humor, so may have taken some liberties. Takes a few moments to load.</a></dd>
+
+              <dd class="project-tile"><a target="_blank" href="CISC3630/Pushin_In_The_Stars_Jamila_Toaha/index.html">Pushin (the cat) In The Stars<img src="images/project-covers/pushin-cover.png">Mini Game created using Clickteam Fusion. Takes a few moments to load.</a></dd>
+
+            </dl>
+            </section>
 
         <section id="cisc3630">
           <h2>CISC 3630: Multimedia Computing</h2>
@@ -259,18 +287,8 @@
     </section>
 
 <section>
-    <!-- Place <div> tag where you want the feed to appear -->
-      <h2>My Instagram Feed</h2>
-<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
-<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
-<script type="text/javascript">
-/* curator-feed-default-feed-layout */
-(function(){
-var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
-i.src = "https://cdn.curator.io/published/3d50526d-c832-412a-8731-b4b3bf154eee.js";
-e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
-})();
-</script>
+
+
 </section>
 </div>
     </section>
@@ -283,14 +301,32 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   <h2>Resumé</h2>
   <div id="resume-content">
 
-     <object data="Jamila Toaha - Tech Resume - 081420.pdf" type="application/pdf" width="100%" height="100%">
-      <p>Technical Resume (as of 12/20/20): <a  target="_blank" href="docs/Jamila Toaha - Tech Resume - 122020.pdf">Download</a></p>
+     <object data="Jamila Toaha - Tech Resume - 081420.pdf" type="application/pdf">
+      <p>Jamila Toaha - Technical Resume:<br><a  target="_blank" href="docs/Jamila Toaha - Resume.pdf">Download<br><img width="20%" src="docs/Resume Preview.png"></a></p>
     </object>
-     <object data="Jamila Toaha Non-Technical Resume 11_20_19.pdf" type="application/pdf" width="100%" height="100%">
-      <p>Non-Technical Resume (11/20/19):<a target="_blank" href="docs/Jamila Toaha Non-Technical Resume 11_20_19.pdf">Download</a></p>
-    </object>
-    <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/jamila-toaha/">https://www.linkedin.com/in/jamila-toaha/</a></p>
+
+    <div class="social-icons">
+      <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+       -->
+      <a href="https://www.linkedin.com/in/jamila-toaha">
+        <img src="images/social-media/linkedin.png">
+      </a>
+      <a href="https://github.com/jtoaha">
+        <img src="images/social-media/github.png">
+      </a>
+      <a href="https://www.youtube.com/channel/UCM4Ngcx_KIJC1XwedIiQKNg">
+        <img src="images/social-media/youtube.png">
+      </a>
+      <a href="https://instagram.com/dijitalink">
+        <img src="images/social-media/instagram.png">
+      </a>
+
+      <br/>
+      <br/>
+      <br/>
     </div>
+    </div>
+
   </section>
 
   </body>
