Update Social Media links and css

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <img id="home-icon" alt="home button" src="./images/home-icon-bw.png"  onmouseover="this.src='./images/home-icon-black-pink.png';" onmouseout="this.src='./images/home-icon-bw.png';" >
         </a>
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
+         <a class ="nav-link" href="#portfolio-br"><li>Portfolio</li></a>
           <a class ="nav-link" href="#resume"><li>Resumé</li></a>
-          <a class ="nav-link" href="#portfolio-br"><li>Portfolio</li></a>
           <a class ="nav-link" href="aboutme.html"><li>Contact Me</li></a>
       </ul>
     </nav>
@@ -264,14 +264,26 @@
           Built a (dummy) e-commerce website with a team. The website was built using Javascript, React and CSS. Worked as a team to take care of details, though primarily assisted with setting up Heroku deployment, integrating Google OAuth login, and implementing payment with Stripe.
         </p>
       </div>
-
-
     </section>
 
-<section>
+    <section id="ig">
+      <h2>Instagram Feed <a target="_blank" href="https://www.instagram.com/dijital.ink/"> @dijital.ink</a></h2>
+      <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+      <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+      <script type="text/javascript">
+      /* curator-feed-default-feed-layout */
+      (function(){
+      var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+      i.src = "https://cdn.curator.io/published/3d50526d-c832-412a-8731-b4b3bf154eee.js";
+      e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+      })();
+      </script>
+      </section>
 
 
-</section>
+
+
+
 </div>
     </section>
 
@@ -290,16 +302,16 @@
     <div class="social-icons">
       <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
        -->
-      <a href="https://www.linkedin.com/in/jamila-toaha">
+      <a target="_blank" href="https://www.linkedin.com/in/jamila-toaha">
         <img src="images/social-media/linkedin.png">
       </a>
-      <a href="https://github.com/jtoaha">
+      <a target="_blank" href="https://github.com/jtoaha">
         <img src="images/social-media/github.png">
       </a>
-      <a href="https://www.youtube.com/channel/UCM4Ngcx_KIJC1XwedIiQKNg">
+      <a target="_blank" href="https://www.youtube.com/channel/UCM4Ngcx_KIJC1XwedIiQKNg">
         <img src="images/social-media/youtube.png">
       </a>
-      <a href="https://instagram.com/dijitalink">
+      <a target="_blank" href="https://instagram.com/dijital.ink">
         <img src="images/social-media/instagram.png">
       </a>
 
