Add Scratch Game - Little Red to Rescue

--- a/index.html
+++ b/index.html
@@ -214,11 +214,13 @@
       <h2>CISC 1600: Intro to Multimedia Computing</h2>
       <p>Fall 2019</p>
       <div class="project-content"   id="littlered-content">
-        <h3>Little Red</h3>
-        <a target="_blank" href="">Link to Project-Will Update</a>
-        <br>
+        <h3>Little Red to the Rescue</h3>
+        <a href="https://scratch.mit.edu/projects/355511089/">https://scratch.mit.edu/projects/355511089/</a>
+        <iframe src="https://scratch.mit.edu/projects/355511089/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <br/>
+        Click embedded Scratch game above to play. Here is a demonstration of game:
         <img src="https://i.ibb.co/yFJYN12/little-red-gameplay-gif.gif" alt="little-red-gameplay-gif" border="0">
-
+        
         <p>
           Developed a mini-game with the visual programming language Scratch. Little Red goes on missions to save the day. Implemented movement, obstacle, win & loss condition, and other details. Teleportation access points more or less original concept. As of now, excluding start and instructions screens, gameplay is one level. Most graphics borrowed here, aside from a bit of tweaking.
         </p>
